# argparse

./: .gitignore  CMakeLists.txt  Readme.md  argparse-config.cmake.in
.github/workflows/: cmake-multi-platform.yml
examples/: argparse_example.cpp  argparse_subcommands.cpp  custom_class.cpp  enums.cpp  hello_world.cpp  multiple_arguments.cpp
include/: argparse.h  argparse2.h  argparse3.h  argparse4.h
include/argparse/: argparse.hpp
src/: argparse2_test.cpp  argparse3_test.cpp  argparse4_test.cpp  argparse_test.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
